--- a/kook-tracker/app/templates/event.html
+++ b/kook-tracker/app/templates/event.html
@@ -31,7 +31,7 @@
                 {% for kook in kook_row %}
                     <td style="border-collapse:separate;border: 0px;padding-left:80px;padding-right:80px;padding-top:10px">
                         <table style="border-collapse:collapse;border: 4px solid #000000">
-                            <tr><td style="background-color:{{ kook.background }};color:{{ kook.text }};text-align:center">
+                            <tr><td colspan="2" style="background-color:{{ kook.background }};color:{{ kook.text }};text-align:center">
                                 {{ kook.name }}
                             </td></tr>
                             {% for athlete in kook.athletes %}
