--- a/kook-tracker/app/templates/base.html
+++ b/kook-tracker/app/templates/base.html
@@ -1,5 +1,9 @@
 <html>
     <head>
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Didact+Gothic&display=swap" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/event.css') }}">
         <title>Kook Tracker</title>
     </head>
     <body>
