adding points possible calc

--- a/kook-tracker/app/templates/event.html
+++ b/kook-tracker/app/templates/event.html
@@ -43,6 +43,9 @@
                             <tr>
                                 <td>Total</td><td>{{ kook.score }}</td>
                             </tr>
+                            <tr>
+                                <td>Possible</td><td>{{ kook.possible }}</td>
+                            </tr>
                         </table>
                     </td>
                 {% endfor %}
